# hash-tree-crypt

./: .gitignore  Cargo.toml  README.md  makefile
src/: args.rs  file.rs  hasher.rs  main.rs  tree.rs  xor_reader.rs
